# ComfyUi-Scale-Image-to-Total-Pixels-Advanced

./: README.md  __init__.py  pyproject.toml
js/: center.js
